# project_vespa

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md
docs/annexes/: bom.md  cablage.md  cablage_motion_node.txt  dette_technique.md  jetson_setup.md  protocole_can.md  securite_laser.md
docs/src/: Bibliographie.tex  Difficultes_techniques.tex  Rapport_technique.tex  build.sh  vespa.bib  vespa_style.sty
hardware/: .gitattributes
hardware/mechanical/: GM5208-12.json  README.md
hardware/mechanical/cad/: VESPA_ASY_Base_A.1_WIP.step  VESPA_Bench_BoardPlate_A.1.step
hardware/mechanical/print/: VESPA_Base_Hub_A.1.stl  VESPA_Camera_CarrierB_A.1.3mf  VESPA_Frame_BaseA_A.2.stl  VESPA_Frame_BaseB_A.2.stl  VESPA_Frame_JointB2_A.1.stl  VESPA_Frame_LinkB1_A.1.stl  VESPA_Frame_LinkC_A.3.stl  VESPA_Link_BracketLeft_A.1.stl  VESPA_Link_BracketRight_A.1.stl  VESPA_Optics_LensHolderSpacer_A.1.3mf  VESPA_Turret_BearingPlate_A.1.stl  VESPA_Turret_FrontShield_A.1.3mf  VESPA_Turret_LABracket_A.1.3mf  VESPA_Turret_LaserMountFront_A.2.3mf  VESPA_Turret_MotorMount_A.1.3mf  VESPA_Turret_MotorPlate_A.1.stl  VESPA_Turret_RailType1_A.2.3mf  VESPA_Turret_RailType2_A.2.3mf  VESPA_Turret_ShieldLite_A.1.stl  VESPA_Turret_XFrame1Top_A.1.3mf
hardware/mechanical/print/plates/: PLATE_BearingMount_MotorMount.3mf  PLATE_FrontShield_flat.3mf  PLATE_FrontShield_tilted.3mf  PLATE_RailType1_x2.3mf  PLATE_RailType2_x2.3mf  PLATE_Structural_x4.3mf
jetson/: extlinux.conf.reference
jetson/dts/: can0-pinmux.dtbo  can0-pinmux.dts  jetson-io-hdr40-user-custom.dtbo  jetson-io-hdr40-user-custom.dts  tegra234-p3767-camera-p3768-arducam-dual.dtbo
jetson/systemd/: can0-setup.service
simulation/optique/: Laser_Optics_v1.m
simulation/vision/: Camera_PosResAttitude_v6.m
software/: CMakeLists.txt
software/Tools/calibration_tool/: app.py
software/Tools/calibration_tool/templates/: index.html
software/Tools/expogain_calibration/: run_exposure.sh
software/Tools/expogain_calibration/templates/: index_EG.html
software/Tools/live_viewport/: app_TR.py  run_liveviewport.sh
software/Tools/stereo_calibration/: app_ST.py  run_calibration.sh
software/Tools/stereo_calibration/templates/: index_ST.html
software/builds/: CMakeCache.txt  Makefile  cmake_install.cmake  vespa_protocol_test  vespa_vision_node
software/builds/deepstream_config/: config_infer_primary.txt  config_tracker.yml  deepstream_config  labels.txt
software/common/: CAN.h  Protocol_Manifest.txt  can_protocol.h  can_utils.c  can_utils.h  library.json
software/common/inc/: can_protocol.h
software/coordination_node/: README.md
software/legacy_mk1_bench/: README.md
software/legacy_mk1_bench/examples/: example_ContinuousSpeed.cpp  example_Oscillation&Homing
software/legacy_mk1_bench/include/: config.h  stepper.h
software/legacy_mk1_bench/src/: main.cpp  stepper.cpp
software/motion_node/: platformio.ini
software/motion_node/Examples/: CAN_integration_example.cpp  OneTimeInitialisationAngle.cpp
software/motion_node/include/: motion_can.h  pinout.h
software/motion_node/src/: main.cpp  motion_can.cpp
software/tests/: test_protocol.cpp
software/tools/calib_exposition/: app_EG.py  requirements.txt  run_exposure.sh
software/tools/calib_stereo/: app_ST.py  requirements.txt  run_calibration.sh
software/tools/viewport_live/: app_TR.py  requirements.txt
software/vision_node/: CMakeLists.txt  PWM_sync_start.sh  PWM_sync_stop.sh
software/vision_node/builds/: CMakeCache.txt  Makefile  cmake_install.cmake  frame_0.pgm  frame_1.pgm  frame_2.pgm  frame_3.pgm  frame_4.pgm  frame_5.pgm  frame_6.pgm  frame_7.pgm  frame_8.pgm  frame_9.pgm  test_camera_hal  vespa_vision
software/vision_node/config/: .active_profile  camera_settings.json  stereovision_settings.json
software/vision_node/config/profiles/: P1.json  P2.json  P2_dark.json  P3_bright.json
software/vision_node/deepstream_config/: config_infer_primary.txt
software/vision_node/include/: ArUcoTracker.h  CameraInterface.h  HardwareSyncController.h  InferenceEngine.h  Orchestrator.h  PredictiveTurretSight.h  StereoTriangulator.h  Tracker.h  config_path.h  custom_probes.hpp  vespa_ballistics.hpp  vespa_can.hpp  vespa_depth.hpp  vespa_pipeline.hpp  vespa_types.hpp  vespa_worker.hpp  vision_can.h
software/vision_node/models/: README.md
software/vision_node/src/: ArUcoTracker.cpp  CameraInterface.cpp  HardwareSyncController.cpp  InferenceEngine.cpp  Orchestrator.cpp  PredictiveTurretSight.cpp  StereoTriangulator.cpp  Tracker.cpp  calibration_bridge.cpp  main.cpp  sparse_tracker.cpp  stereo_tracker.cpp  test_camera_hal.cpp  test_hardware_sync.cpp  test_stereo_pipeline.cpp  turret_tracker.cpp  vespa_worker.cpp  vision_can.cpp
software/vision_node/src/algorithms/: vespa_depth.cpp
software/vision_node/src/comms/: vespa_can.cpp
software/vision_node/src/pipeline/: custom_probes.cpp  vespa_pipeline.cpp
tools/: init_architecture.sh
